--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="box3"></div>
     <div id="box4"></div>
     <div id="box5"></div>
+    <div id="box6"></div>
 
     <script src="index.js"></script>
 </body>
