Added first puzzle picture
Test one of first puzzle

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box1"></div>
-    <div id="box2"></div>
-    <div id="box3"></div>
-    <div id="box4"></div>
-    <div id="box5"></div>
-    <div id="box6"></div>
+    <div class="container">
+        <div id="box1" class="puzzle_piece"><img src="images/mark-fal/1.png" alt="1"></div>
+        <div id="box2" class="puzzle_piece"><img src="images/mark-fal/2.png" alt="2"></div>
+        <div id="box3" class="puzzle_piece"><img src="images/mark-fal/3.png" alt="3"></div>
+        <div id="box4" class="puzzle_piece"><img src="images/mark-fal/4.png" alt="4"></div>
+        <div id="box5" class="puzzle_piece"><img src="images/mark-fal/5.png" alt="5"></div>
+        <div id="box6" class="puzzle_piece"><img src="images/mark-fal/6.png" alt="6"></div>
+        <div id="box7" class="puzzle_piece"><img src="images/mark-fal/7.png" alt="7"></div>
+        <div id="box8" class="puzzle_piece"><img src="images/mark-fal/8.png" alt="8"></div>
+        <div id="box9" class="puzzle_piece"><img src="images/mark-fal/9.png" alt="9"></div>
+        <div id="box10" class="puzzle_piece"><img src="images/mark-fal/10.png" alt="10"></div>
+        <div id="box11" class="puzzle_piece"><img src="images/mark-fal/11.png" alt="11"></div>
+        <div id="box12" class="puzzle_piece"><img src="images/mark-fal/12.png" alt="12"></div>
+        <div id="box13" class="puzzle_piece"><img src="images/mark-fal/13.png" alt="13"></div>
+        <div id="box14" class="puzzle_piece"><img src="images/mark-fal/14.png" alt="14"></div>
+        <div id="box15" class="puzzle_piece"><img src="images/mark-fal/15.png" alt="15"></div>
+    </div>
 
     <script src="index.js"></script>
 </body>
