Attempt #1 to fix scattering

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <div id="box1" class="puzzle_piece"><img src="images/mark-fal/1.png" alt="1"></div>
         <div id="box2" class="puzzle_piece"><img src="images/mark-fal/2.png" alt="2"></div>
         <div id="box3" class="puzzle_piece"><img src="images/mark-fal/3.png" alt="3"></div>
