--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -4,11 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puzzle</title>
+    <title>Boldog Karácsonyt!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
+        <table>
+            <tr>
+                <td id="pl1">
+                    <div class="triangle-right" id="right1"></div>
+                    <div class="triangle-down" id="down1"></div>
+                    <img src="images/mark-fal/1.png" alt="1" id="img1">
+                </td>
+                <td id="pl2">
+                    <div class="triangle-right" id="right2"></div>
+                    <div class="triangle-left" id="left2"></div>
+                    <div class="triangle-down" id="down2"></div>
+                    <img src="images/mark-fal/2.png" alt="2" id="img2">
+                </td>
+                <td id="pl3">
+                    <div class="triangle-left" id="left3"></div>
+                    <div class="triangle-down" id="down3"></div>
+                    <img src="images/mark-fal/3.png" alt="3" id="img3">
+                </td>
+            </tr>
+            <tr>
+                <td id="pl4">
+                    <div class="triangle-right" id="right4"></div>
+                    <div class="triangle-down" id="down4"></div>
+                    <div class="triangle-up" id="up4"></div>
+                    <img src="images/mark-fal/4.png" alt="4" id="img4">
+                </td>
+                <td id="pl5">
+                    <div class="triangle-left" id="left5"></div>
+                    <div class="triangle-right" id="right5"></div>
+                    <div class="triangle-down" id="down5"></div>
+                    <div class="triangle-up" id="up5"></div>
+                    <img src="images/mark-fal/5.png" alt="5" id="img5">
+                </td>
+                <td id="pl6">
+                    <div class="triangle-left" id="left6"></div>
+                    <div class="triangle-down" id="down6"></div>
+                    <div class="triangle-up" id="up6"></div>
+                    <img src="images/mark-fal/6.png" alt="6" id="img6">
+                </td>
+            </tr>
+            <tr>
+                <td id="pl7">
+                    <div class="triangle-right" id="right7"></div>
+                    <div class="triangle-down" id="down7"></div>
+                    <div class="triangle-up" id="up7"></div>
+                    <img src="images/mark-fal/7.png" alt="7" id="img7">
+                </td>
+                <td id="pl8">
+                    <div class="triangle-left" id="left8"></div>
+                    <div class="triangle-right" id="right8"></div>
+                    <div class="triangle-down" id="down8"></div>
+                    <div class="triangle-up" id="up8"></div>
+                    <img src="images/mark-fal/8.png" alt="8" id="img8">
+                </td>
+                <td id="pl9">
+                    <div class="triangle-left" id="left9"></div>
+                    <div class="triangle-down" id="down9"></div>
+                    <div class="triangle-up" id="up9"></div>
+                    <img src="images/mark-fal/9.png" alt="9" id="img9">
+                </td>
+            </tr>
+            <tr>
+                <td id="pl10">
+                    <div class="triangle-right" id="right10"></div>
+                    <div class="triangle-down" id="down10"></div>
+                    <div class="triangle-up" id="up10"></div>
+                    <img src="images/mark-fal/10.png" alt="10" id="img10">
+                </td>
+                <td id="pl11">
+                    <div class="triangle-left" id="left11"></div>
+                    <div class="triangle-right" id="right11"></div>
+                    <div class="triangle-down" id="down11"></div>
+                    <div class="triangle-up" id="up11"></div>
+                    <img src="images/mark-fal/11.png" alt="11" id="img11">
+                </td>
+                <td id="pl12">
+                    <div class="triangle-left" id="left12"></div>
+                    <div class="triangle-down" id="down12"></div>
+                    <div class="triangle-up" id="up12"></div>
+                    <img src="images/mark-fal/12.png" alt="12" id="img12">
+                </td>
+            </tr>
+            <tr>
+                <td id="pl13">
+                    <div class="triangle-right" id="right13"></div>
+                    <div class="triangle-up" id="up13"></div>
+                    <img src="images/mark-fal/13.png" alt="13" id="img13">
+                </td>
+                <td id="pl14">
+                    <div class="triangle-left" id="left14"></div>
+                    <div class="triangle-right" id="right14"></div>
+                    <div class="triangle-up" id="up14"></div>
+                    <img src="images/mark-fal/14.png" alt="14" id="img14">
+                </td>
+                <td id="pl15">
+                    <div class="triangle-left" id="left15"></div>
+                    <div class="triangle-up" id="up15"></div>
+                    <img src="images/mark-fal/15.png" alt="15" id="img15">
+                </td>
+            </tr>
+        </table>
+        <!--
         <div id="box1" class="puzzle_piece"><img src="images/mark-fal/1.png" alt="1"></div>
         <div id="box2" class="puzzle_piece"><img src="images/mark-fal/2.png" alt="2"></div>
         <div id="box3" class="puzzle_piece"><img src="images/mark-fal/3.png" alt="3"></div>
@@ -24,6 +126,7 @@
         <div id="box13" class="puzzle_piece"><img src="images/mark-fal/13.png" alt="13"></div>
         <div id="box14" class="puzzle_piece"><img src="images/mark-fal/14.png" alt="14"></div>
         <div id="box15" class="puzzle_piece"><img src="images/mark-fal/15.png" alt="15"></div>
+        -->
     </div>
 
     <script src="index.js"></script>
