Quality of life improvements
Added title and removed arrows when solved, removed borders (?).

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boldog Karácsonyt!</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
         <table>
+            <tr>
+                <th colspan="3"><p id="title"></p></th>
+            </tr>
             <tr>
                 <td id="pl1">
                     <div class="triangle-right" id="right1"></div>
