Fixed space between images

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container">
-        <table>
+        <table frame="void">
             <tr>
                 <th colspan="3"><p id="title"></p></th>
             </tr>
