Test with demo data from file
Working version of the map with a demo dataset.

--- a/shared/pifu-map-testing/index.html
+++ b/shared/pifu-map-testing/index.html
@@ -15,10 +15,10 @@
     <title>Piár Futár</title>
 </head>
 <body>
-    <h1>Hol volt a Piár Futár?</h1>
+    <h1>Merre jártunk?</h1>
 
     <div id="pifuMap"></div>
 
-    <script src="index.js"></script> 
+    <script type="module" src="index.js"></script> 
 </body>
 </html>
