--- a/shared/pifu-map-testing/index.html
+++ b/shared/pifu-map-testing/index.html
@@ -11,14 +11,19 @@
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin=""></script>
     <link rel="stylesheet" href="style.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Piár Futár</title>
 </head>
 <body>
-    <h1>Merre jártunk?</h1>
+    <div class="container-fluid">
+        <div class="row"><h1>Merre jártunk?</h1></div>
 
-    <div id="pifuMap"></div>
-
+        <div class="row">
+            <div id="pifuMap"></div>
+        </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="module" src="index.js"></script> 
 </body>
 </html>
