--- a/shared/pifu-map-testing/index.html
+++ b/shared/pifu-map-testing/index.html
@@ -12,18 +12,51 @@
      crossorigin=""></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Material Icon CDN -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Piár Futár</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row"><h1>Merre jártunk?</h1></div>
+        <div class="row">
+            <div class="col"><h1>Merre jártunk?</h1></div>
+            <div class="col">
+                <ul class="menu">
+                    <li><b><a class="menuItem" href="#">2023</a></b></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><b><a class="menuItem" href="#">2022</a></b></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><b><a class="menuItem" href="#">2021</a></b></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                    <li><a class="menuItem" href="#">Location</a></li>
+                </ul>
+                <button class="hamburger">
+                    <!-- material icons https://material.io/resources/icons/ -->
+                    <i class="menuIcon material-icons">menu</i>
+                    <i class="closeIcon material-icons">close</i>
+                </button>
+            </div>
+        </div>
 
         <div class="row">
             <div id="pifuMap"></div>
         </div>
     </div>
+
     
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script type="module" src="index.js"></script> 
+    <script type="module" src="index.js"></script>
+    <script type="module" src="menu.js"></script>
 </body>
 </html>
