--- a/shared/pifu-map-testing/index.html
+++ b/shared/pifu-map-testing/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col"><h1>Merre jártunk?</h1></div>
+            <div class="col-11"><h1>Merre jártunk?</h1></div>
             <div class="col">
                 <ul class="menu">
                     <li><b><a class="menuItem" href="#">2023</a></b></li>
