--- a/shared/pifu-map-testing/index.html
+++ b/shared/pifu-map-testing/index.html
@@ -14,7 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- Material Icon CDN -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/images/piar-logo.png">
+    <link href="images/piar-logo-dark.ico?" rel="icon" media="(prefers-color-scheme: light)"/>
+    <link href="images/piar-logo-light.ico?" rel="icon" media="(prefers-color-scheme: dark)"/>
+
     <title>Piár Futár</title>
 </head>
 <body>
