--- a/shared/pifu-map/dev/index.html
+++ b/shared/pifu-map/dev/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-11"><h1>Merre jártunk?</h1></div>
+            <div class="col-11"><h1>Merre járt a Piár Futár az elmúlt 20 évben?</h1></div>
             <div class="col">
                 <ul class="menu">
                     <li><b><a class="menuItem" href="#">2023</a></b></li>
@@ -55,8 +55,6 @@
             <div id="pifuMap"></div>
         </div>
     </div>
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script type="module" src="index.js"></script>
