--- a/shared/valentines-day-2024/index.html
+++ b/shared/valentines-day-2024/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>i love you</title>
+    <link rel="icon" type="image/x-icon" href="media/heart-icon.png">
     <style>
         body {
             background:
@@ -33,6 +34,7 @@
             text-align: center;
             background: none;
             border: none;
+            padding-bottom: 200px;
         }
     </style>
 </head>
