--- a/shared/szksc-qr-code-attendance/index.html
+++ b/shared/szksc-qr-code-attendance/index.html
@@ -10,6 +10,10 @@
 
     <input type="file" id="qr-input-file" accept="image/*">
 
+    <div>
+        <p id="scanned-result"></p>
+    </div>
+
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <script src="./dist/html5-qrcode.js"></script>
     <script src="script.js"></script>
