--- a/shared/szksc-qr-code-attendance/index.html
+++ b/shared/szksc-qr-code-attendance/index.html
@@ -11,7 +11,7 @@
     <input type="file" id="qr-input-file" accept="image/*">
 
     <div>
-        <p id="scanned-result"></p>
+        <p id="scanned-result">[result]</p>
     </div>
 
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
