--- a/shared/szksc-qr-code-attendance/index.html
+++ b/shared/szksc-qr-code-attendance/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="reader" width="600px"></div>
 
-    <input type="file" id="qr-input-file" accept="image/*">
+    <!--<input type="file" id="qr-input-file" accept="image/*">-->
 
     <div>
         <p id="scanned-result">[result]</p>
